# protein-aggregation

./: .gitignore  Dockerfile  Makefile  TODO.md  main.py  pyproject.toml  requirements.txt  startdkr.sh
.devcontainer/: devcontainer.json  setup.sh
data/proteins/: alphafold_predicted_insulin.cif
notebooks/: eda.ipynb
report/: report.tex
scripts/: cif_to_pdb.py  rmsd.py  single_esm_prediction.py
src/bioinformatics.egg-info/: PKG-INFO  SOURCES.txt
src/genetic/: fitness.py  instance.py  mutation.py
src/logging/: config.py  timer.py
src/protein/: index.py  model.py  rosetta.py
