[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bioinformatics"
readme = "README.md"
dynamic = ["version"]
requires-python = ">= 3.11"

dependencies = [
    "numpy",
    "pandas",
    "seaborn",
    "matplotlib",
    "biopython",
    "scikit-learn",
    "keras",
    "tensorflow",
]
